Fix section overlapping on mobile due to vh issue, add html title, done for the night

--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -44,8 +44,24 @@
   .experience-container {
     grid-template-columns: 1fr;
   }
+
+  .experience-container > div {
+    width: 80%;
+    padding: 2rem;
+    margin: 0 auto;
+  }
+
+  .experience__content {
+    padding: 0.75rem;
+  }
 }
 
 @media screen and (max-width: 600px) {
-
+  .experience-container {
+    gap: 1rem;
+  }
+  .experience-container > div {
+    width: 100%;
+    padding: 2rem 1rem;
+  }
 }
