--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -66,9 +66,7 @@ header {
 
 /* Media Queries (Medium Devices) */
 @media screen and (max-width: 1024px) {
-  header {
-    height: 60vh;
-  }
+
 }
 
 /* Media Queries (Small Devices) */
