--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,10 @@ img {
     width: var(--container-width-sm);
   }
 
+  section {
+    height: fit-content;
+  }
+
   section > h2 {
     margin-bottom: 2rem;
   }
